[tool.poetry]
name = "bnn-hmc"
version = "0.1.0"
description = ""
authors = ["Gabriel Watkinson <gabriel.watkinson@gmail.com>"]
readme = "README.md"
packages = [{include = "bnn_hmc"}]

[tool.poetry.dependencies]
python = "3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
